test/spec/memory64/call_indirect.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/memory64/call_indirect.wast
;;; ARGS*: --enable-memory64
(;; STDOUT ;;;
out/test/spec/memory64/call_indirect.wast:508: assert_trap passed: indirect call signature mismatch
out/test/spec/memory64/call_indirect.wast:509: assert_trap passed: indirect call signature mismatch
out/test/spec/memory64/call_indirect.wast:510: assert_trap passed: undefined table index
out/test/spec/memory64/call_indirect.wast:511: assert_trap passed: undefined table index
out/test/spec/memory64/call_indirect.wast:512: assert_trap passed: undefined table index
out/test/spec/memory64/call_indirect.wast:518: assert_trap passed: indirect call signature mismatch
out/test/spec/memory64/call_indirect.wast:519: assert_trap passed: indirect call signature mismatch
out/test/spec/memory64/call_indirect.wast:525: assert_trap passed: indirect call signature mismatch
out/test/spec/memory64/call_indirect.wast:526: assert_trap passed: indirect call signature mismatch
out/test/spec/memory64/call_indirect.wast:532: assert_trap passed: indirect call signature mismatch
out/test/spec/memory64/call_indirect.wast:533: assert_trap passed: indirect call signature mismatch
out/test/spec/memory64/call_indirect.wast:539: assert_trap passed: indirect call signature mismatch
out/test/spec/memory64/call_indirect.wast:540: assert_trap passed: indirect call signature mismatch
out/test/spec/memory64/call_indirect.wast:662: assert_trap passed: undefined table index
out/test/spec/memory64/call_indirect.wast:667: assert_trap passed: undefined table index
out/test/spec/memory64/call_indirect.wast:671: assert_trap passed: uninitialized table element
out/test/spec/memory64/call_indirect.wast:672: assert_trap passed: indirect call signature mismatch
out/test/spec/memory64/call_indirect.wast:673: assert_trap passed: undefined table index
out/test/spec/memory64/call_indirect.wast:679: assert_malformed passed:
  out/test/spec/memory64/call_indirect/call_indirect.2.wat:1:122: error: unexpected token "param", expected an expr.
  ...indirect (type $sig) (result i32) (param i32)    (i32.const 0) (i32.const ...
                                        ^^^^^
  out/test/spec/memory64/call_indirect/call_indirect.2.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (type $sig) (result i32) (param i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/memory64/call_indirect.wast:691: assert_malformed passed:
  out/test/spec/memory64/call_indirect/call_indirect.3.wat:1:109: error: unexpected token "type", expected an expr.
  ... i32)  (call_indirect (param i32) (type $sig) (result i32)    (i32.const 0...
                                        ^^^^
  out/test/spec/memory64/call_indirect/call_indirect.3.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (param i32) (type $sig) (result i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/memory64/call_indirect.wast:703: assert_malformed passed:
  out/test/spec/memory64/call_indirect/call_indirect.4.wat:1:122: error: unexpected token "type", expected an expr.
  ...indirect (param i32) (result i32) (type $sig)    (i32.const 0) (i32.const ...
                                        ^^^^
  out/test/spec/memory64/call_indirect/call_indirect.4.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (param i32) (result i32) (type $sig)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/memory64/call_indirect.wast:715: assert_malformed passed:
  out/test/spec/memory64/call_indirect/call_indirect.5.wat:1:110: error: unexpected token "type", expected an expr.
  ...i32)  (call_indirect (result i32) (type $sig) (param i32)    (i32.const 0)...
                                        ^^^^
  out/test/spec/memory64/call_indirect/call_indirect.5.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (result i32) (type $sig) (param i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/memory64/call_indirect.wast:727: assert_malformed passed:
  out/test/spec/memory64/call_indirect/call_indirect.6.wat:1:110: error: unexpected token "param", expected an expr.
  ...i32)  (call_indirect (result i32) (param i32) (type $sig)    (i32.const 0)...
                                        ^^^^^
  out/test/spec/memory64/call_indirect/call_indirect.6.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (result i32) (param i32) (type $sig)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/memory64/call_indirect.wast:739: assert_malformed passed:
  out/test/spec/memory64/call_indirect/call_indirect.7.wat:1:67: error: unexpected token "param", expected an expr.
  ...t i32)  (call_indirect (result i32) (param i32) (i32.const 0) (i32.const 0)))
                                          ^^^^^
  out/test/spec/memory64/call_indirect/call_indirect.7.wat:1:106: error: unexpected token ), expected EOF.
  ...t i32)  (call_indirect (result i32) (param i32) (i32.const 0) (i32.const 0)))
                                                                                 ^
out/test/spec/memory64/call_indirect.wast:749: assert_malformed passed:
  out/test/spec/memory64/call_indirect/call_indirect.8.wat:1:46: error: unexpected token $x, expected ).
  ...e 0 funcref)(func (call_indirect (param $x i32) (i32.const 0) (i32.const 0)))
                                             ^^
  out/test/spec/memory64/call_indirect/call_indirect.8.wat:1:82: error: unexpected token ), expected EOF.
  ...e 0 funcref)(func (call_indirect (param $x i32) (i32.const 0) (i32.const 0)))
                                                                                 ^
out/test/spec/memory64/call_indirect.wast:756: assert_malformed passed:
  out/test/spec/memory64/call_indirect/call_indirect.9.wat:1:57: error: expected 0 results, got 1
  ...0 funcref)(func (result i32)  (call_indirect (type $sig) (result i32) (i32...
                                    ^^^^^^^^^^^^^
out/test/spec/memory64/call_indirect.wast:766: assert_malformed passed:
  out/test/spec/memory64/call_indirect/call_indirect.10.wat:1:82: error: expected 1 arguments, got 0
  ...0 funcref)(func (result i32)  (call_indirect (type $sig) (result i32) (i32...
                                    ^^^^^^^^^^^^^
out/test/spec/memory64/call_indirect.wast:776: assert_malformed passed:
  out/test/spec/memory64/call_indirect/call_indirect.11.wat:1:69: error: expected 1 results, got 0
  ...i32)))(table 0 funcref)(func  (call_indirect (type $sig) (param i32) (i32....
                                    ^^^^^^^^^^^^^
out/test/spec/memory64/call_indirect.wast:786: assert_malformed passed:
  out/test/spec/memory64/call_indirect/call_indirect.12.wat:1:86: error: expected 2 arguments, got 1
  ...0 funcref)(func (result i32)  (call_indirect (type $sig) (param i32) (resu...
                                    ^^^^^^^^^^^^^
out/test/spec/memory64/call_indirect.wast:801: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.13.wasm:000001c: error: table variable out of range: 0 (max 0)
  out/test/spec/memory64/call_indirect/call_indirect.13.wasm:000001c: error: type mismatch: call_indirect must reference table of funcref type
  000001c: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:809: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.14.wasm:0000023: error: type mismatch in i32.eqz, expected [i32] but got []
  0000023: error: OnConvertExpr callback failed
out/test/spec/memory64/call_indirect.wast:817: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.15.wasm:0000027: error: type mismatch in i32.eqz, expected [i32] but got [i64]
  0000027: error: OnConvertExpr callback failed
out/test/spec/memory64/call_indirect.wast:826: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.16.wasm:0000026: error: type mismatch in call_indirect, expected [i32] but got []
  0000026: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:834: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.17.wasm:0000027: error: type mismatch in call_indirect, expected [f64, i32] but got []
  0000027: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:842: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.18.wasm:0000025: error: type mismatch at end of function, expected [] but got [i32]
  0000025: error: EndFunctionBody callback failed
out/test/spec/memory64/call_indirect.wast:850: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.19.wasm:000002e: error: type mismatch at end of function, expected [] but got [f64, i32]
  000002e: error: EndFunctionBody callback failed
out/test/spec/memory64/call_indirect.wast:861: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.20.wasm:0000027: error: type mismatch in call_indirect, expected [i32] but got []
  0000027: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:869: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.21.wasm:0000028: error: type mismatch in call_indirect, expected [i32] but got [... i64]
  0000028: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:878: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.22.wasm:000002a: error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  000002a: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:888: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.23.wasm:000002a: error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  000002a: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:898: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.24.wasm:0000032: error: type mismatch in call_indirect, expected [i32, f64] but got [f64, i32]
  0000032: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:908: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.25.wasm:0000032: error: type mismatch in call_indirect, expected [f64, i32] but got [i32, f64]
  0000032: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:919: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.26.wasm:0000036: error: type mismatch in call_indirect, expected [i32] but got []
  0000036: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:932: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.27.wasm:0000039: error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  0000039: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:945: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.28.wasm:0000036: error: type mismatch in call_indirect, expected [i32] but got []
  0000036: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:958: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.29.wasm:0000039: error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  0000039: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:971: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.30.wasm:000003a: error: type mismatch in call_indirect, expected [i32] but got []
  000003a: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:987: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.31.wasm:000003d: error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  000003d: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:1005: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.32.wasm:0000022: error: type mismatch: call_indirect must reference table of funcref type
  0000022: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:1016: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.33.wasm:0000022: error: function type variable out of range: 1 (max 1)
  0000022: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:1023: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.34.wasm:0000026: error: function type variable out of range: 1012321300 (max 1)
  0000026: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:1032: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.35.wasm:000002e: error: function type variable out of range: 4294967295 (max 2)
  000002e: error: OnCallIndirectExpr callback failed
out/test/spec/memory64/call_indirect.wast:1048: assert_invalid passed:
  out/test/spec/memory64/call_indirect/call_indirect.36.wasm:0000018: error: function variable out of range: 0 (max 0)
  0000018: error: OnRefFuncExpr callback failed
173/173 tests passed.
;;; STDOUT ;;)
